--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="./js/peopleByAge.js" type="module"></script>
+    <script src="./js/letsTalk.js" type="module"></script>
 </body>
 
 </html>
